Shrink play control and prevent overlaps with track data.
TODO: Make the attributes clickable on hover.

--- a/cmd/tchaik/ui/static/sass/bottom.scss
+++ b/cmd/tchaik/ui/static/sass/bottom.scss
@@ -84,12 +84,11 @@ div#bottom {
 
         &.glyphicon-play, &.glyphicon-pause {
           font-size: 28px;
-          line-height: 44px;
-          height: 44px;
-          width: 44px;
-          margin-right: 4px;
+          line-height: 39px;
+          height: 39px;
+          width: 39px;
           margin-top: 0px;
-          padding: 10px 0 10px 20px;
+          padding: 10px 2px 10px 18px;
           border-radius: 50%;
           @include fade-in(border-color, 50ms);
           background-color: rgba(17, 17, 17, 0.5);
@@ -197,6 +196,12 @@ div#bottom {
         line-height: 16px;
         padding: 4px;
         white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow-x: hidden;
+
+        &:hover {
+          overflow-x: visible;
+        }
 
         a:hover {
           color: #ccc;
